5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1582_1332.log
== TEST (2019-03-29 11:06:34) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:06:35) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- EXECUTION TIME:
0.13176
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:00:56) 
-- CODE:
aresta =
area = 
 
print(round(5, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:01:02) 
-- CODE:
aresta =
area = 
 
print(round(5, 4))
-- EXECUTION TIME:
0.215526
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:02:54) 
-- CODE:
aresta = a
area = A
 
print(round(5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:02:58) 
-- CODE:
aresta = a
area = A
 
print(round(5, 4))
-- EXECUTION TIME:
0.192682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    aresta = a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:10:17) 
-- CODE:
aresta = real
area = real
 
print(round(5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = real
NameError: name 'real' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:10:21) 
-- CODE:
aresta = real
area = real
 
print(round(5, 4))
-- EXECUTION TIME:
0.150041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    aresta = real
NameError: name 'real' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:10:52) 
-- CODE:
aresta = "A"
area = "a"
 
print(round(5, 4))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:10:55) 
-- CODE:
aresta = "A"
area = "a"
 
print(round(5, 4))
-- EXECUTION TIME:
0.145618
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:13:11) 
-- CODE:
aresta = "A"
area = "a"
 
print(3//2(3*a)**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(3//2(3*a)**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:15:02) 
-- CODE:
print(3//2(3*a)**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(3//2(3*a)**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:15:07) 
-- CODE:
print(3//2(3*a)**2)
-- EXECUTION TIME:
0.17952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 1, in <module>
    print(3//2(3*a)**2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:31:25) 
-- CODE:
def Hexagono(tart, lado):
"""Desenha um hexagono """
for i in range(6):
tart.fd(lado)
tart.rt(60)
return
-- ERROR:
File "XXXX", line 2
    """Desenha um hexagono """
                             ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:32:58) 
-- CODE:
def Hexagono(tart, lado):

for i in range(6):
tart.fd(lado)
tart.rt(60)
return
-- ERROR:
File "XXXX", line 3
    for i in range(6):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:33:09) 
-- CODE:
def Hexagono(tart, lado):

for i in range(6):
tart.fd(lado)
tart.rt(60)
return
-- EXECUTION TIME:
0.199349
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    for i in range(6):
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:37:21) 
-- CODE:
aresta = 5
Area = A

A = (3//2)*((x)**3)*a**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Area = A
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:37:47) 
-- CODE:
aresta = 5
Area = 'A'

A = (3//2)*((x)**3)*a**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    A = (3//2)*((x)**3)*a**2
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:38:43) 
-- CODE:
aresta = 5
Area = 'A'

A = (3//2)*((3)**0.5)*a**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    A = (3//2)*((3)**0.5)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:39:09) 
-- CODE:
a = 5
Area = 'A'

A = (3//2)*((3)**0.5)*a**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    A = (3//2)*((3)**0.5)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:39:17) 
-- CODE:
a = 5
Area = 'A'

A = (3//2)*((3)**0.5)*a**2
-- EXECUTION TIME:
0.204205
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:41:11) 
-- CODE:
a = 5
Area = 'A'

A = (round((3//2)*((3)**0.5)*a**2),4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    A = (3//2)*((3)**0.5)*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:41:19) 
-- CODE:
a = 5
Area = 'A'

A = (round((3//2)*((3)**0.5)*a**2),4)
-- EXECUTION TIME:
0.138576
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:41:48) 
-- CODE:
a = 5
Area = 'A'

A = (round((3%%2)*((3)**0.5)*a**2),4)
-- ERROR:
File "XXXX", line 4
    A = (round((3%%2)*((3)**0.5)*a**2),4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:42:09) 
-- CODE:
a = 5
Area = 'A'

A = (round((3%2)*((3)**0.5)*a**2),4)
-- ERROR:
File "XXXX", line 4
    A = (round((3%%2)*((3)**0.5)*a**2),4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:42:19) 
-- CODE:
a = 5
Area = 'A'

A = (round((3%2)*((3)**0.5)*a**2),4)
-- EXECUTION TIME:
0.134039
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:42:36) 
-- CODE:
a = 5
Area = 'A'

A = (round((3/2)*((3)**0.5)*a**2),4)
-- ERROR:
File "XXXX", line 4
    A = (round((3%%2)*((3)**0.5)*a**2),4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:42:43) 
-- CODE:
a = 5
Area = 'A'

A = (round((3/2)*((3)**0.5)*a**2),4)
-- EXECUTION TIME:
0.160548
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:47:00) 
-- CODE:
def main():  
    base = input("digite o valor da base do triangulo: ")
    altura = input("digite o valor da altura do triangulo: ")
    print "a media aritmetica e: ", (base*altura)

if __name__ == "__main__":  
    main()
-- ERROR:
File "XXXX", line 4
    print "a media aritmetica e: ", (base*altura)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:47:06) 
-- CODE:
def main():  
    base = input("digite o valor da base do triangulo: ")
    altura = input("digite o valor da altura do triangulo: ")
    print "a media aritmetica e: ", (base*altura)

if __name__ == "__main__":  
    main()
-- EXECUTION TIME:
0.189785
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print "a media aritmetica e: ", (base*altura)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:50:00) 
-- CODE:
aresta = input(5)
Area = input((3/2)*((3)**0.5)*a**2))

-- ERROR:
File "XXXX", line 2
    Area = input((3/2)*((3)**0.5)*a**2))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:50:20) 
-- CODE:
aresta = input(5)
Area = input((3/2)*((3)**0.5)*5**2))

-- ERROR:
File "XXXX", line 2
    Area = input((3/2)*((3)**0.5)*5**2))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:50:27) 
-- CODE:
aresta = input(5)
Area = input((3/2)*((3)**0.5)*5**2))

-- EXECUTION TIME:
0.130675
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    Area = input((3/2)*((3)**0.5)*5**2))
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:50:41) 
-- CODE:
aresta = input(5)
Area = input(round((3/2)*((3)**0.5)*5**2)),4)

-- ERROR:
File "XXXX", line 2
    Area = input(round((3/2)*((3)**0.5)*5**2)),4)
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:51:17) 
-- CODE:
aresta = input(5)
Area = input(round((3/2)*((3)**0.5)*5**2),4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Area = input(round((3/2)*((3)**0.5)*5**2),4)
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:51:26) 
-- CODE:
aresta = input(5)
Area = input(round((3/2)*((3)**0.5)*5**2),4)

-- EXECUTION TIME:
0.205736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    Area = input(round((3/2)*((3)**0.5)*5**2),4)
TypeError: input expected at most 1 arguments, got 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:51:35) 
-- CODE:
Area = input(round((3/2)*((3)**0.5)*5**2),4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Area = input(round((3/2)*((3)**0.5)*5**2),4)
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:52:23) 
-- CODE:
Area = print(input(round((3/2)*((3)**0.5)*5**2),4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Area = print(input(round((3/2)*((3)**0.5)*5**2),4))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:52:59) 
-- CODE:
print ("oi")


-- OUTPUT:
oi
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:06:04) 
-- CODE:
a = 3
b = math.sqrt(a)

print (b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = math.sqrt(a)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:06:52) 
-- CODE:
a = 3
b = math.sqrt(a)

print (b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = math.sqrt(a)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:07:11) 
-- CODE:
a = 3
b = sqrt(a)

print (b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = sqrt(a)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:08:05) 
-- CODE:
Area = 3/2

print (Area)

-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:08:52) 
-- CODE:
a = 5
Area = 3/2+a

print (Area)

-- OUTPUT:
6.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:09:19) 
-- CODE:
a = 5
Area = (3/2)+a

print (Area)

-- OUTPUT:
6.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:10:06) 
-- CODE:
a = 5
Area = (3/2)*((3**0.5))

print (Area)

-- OUTPUT:
2.598076211353316
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:10:42) 
-- CODE:
a = 5
Area = (3/2)*((3**0.5))*(a**2)

print (Area)

-- OUTPUT:
64.9519052838329
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:11:09) 
-- CODE:
a = 5
Area = round((3/2)*((3**0.5))*(a**2),4)

print (Area)

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:11:19) 
-- CODE:
a = 5
Area = round((3/2)*((3**0.5))*(a**2),4)

print (Area)

-- EXECUTION TIME:
0.220806
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
